--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html> <link rel="stylesheet" type="text/css" href="main.css">
-<div>
-	<h1>Patrice White </h1>
-	<body>
-		<p>Aspiring full stack web developer. I like basketball, Anime, Marvel Comics, Doctor Who, and Sherlock </p>
-	<h2>Skills</h2>
-		<ul>
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>JavaScript</li>
-			<li>jQuery</li>
-		</ul>
-	<h2>Contact Info</h2>
-		<p>Twitter: <a href="https://twitter.com/sallyStudent">@SallyStudent</a></p>
-	</body>
-</div>
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+	<main>
+		<!-- Introduction -->
+		<section>
+			<h1>Patrice White</h1>
+			<p>Aspiring full stack web developer. I like basketball, Anime, Marvel Comics, Doctor Who, and Sherlock </p>
+		</section>
+		<!-- Skills -->
+		<section>
+			<h2>Skills</h2>
+			<ul>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+				<li>jQuery</li>
+			</ul>
+		</section>
+		<!-- Contact Info -->
+		<section>
+			<h2>Contact Info</h2>
+			<p>Twitter: <a href="https://twitter.com/sallyStudent">@SallyStudent</a></p>
+		</section>
+	</main>
+</body>
 </html>
